# src/Material/Domain/Requests/InstagramUser.cs
@@ -1,0 +1,43 @@
+﻿//------------------------------------------------------------------------------
+// <auto-generated>
+//     This code was generated by a tool.
+//     Changes to this file may cause incorrect behavior and will be lost if
+//     the code is regenerated.
+// </auto-generated>
+//------------------------------------------------------------------------------
+using Material.Framework.Metadata;
+using Material.Domain.ResourceProviders;
+using System;
+using System.Collections.Generic;
+using Material.Framework.Enums;
+using System.Net;
+using Material.Framework.Metadata.Formatters;
+using Material.Domain.Core;
+using System.CodeDom.Compiler;
+
+namespace Material.Domain.Requests
+{     
+    /// <summary>
+    /// Get information about the owner of the access_token.
+    /// </summary>
+    [ServiceType(typeof(Instagram))]
+	[GeneratedCode("T4Toolbox", "14.0")]
+	public partial class InstagramUser : OAuthRequest              
+	{
+        public override String Host => "https://api.instagram.com";
+        public override String Path => "/v1/users/{user}";
+        public override String HttpMethod => "GET";
+        public override List<MediaType> Produces => new List<MediaType> { MediaType.Json };
+        public override List<MediaType> Consumes => new List<MediaType> { MediaType.Json };
+        public override List<HttpStatusCode> ExpectedStatusCodes => new List<HttpStatusCode> { HttpStatusCode.OK };
+        public override List<String> RequiredScopes => new List<String> { "public_content" };
+        /// <summary>
+        /// The name of the user
+        /// </summary>
+        [Name("user")]
+        [ParameterType(RequestParameterType.Path)]
+        [Required()]
+        [DefaultFormatter()]
+        public  String User { get; set; } = "self";
+	}
+}
